# university-database

./: .gitignore  CMakeLists.txt  Employee.cpp  Employee.hpp  Menu.cpp  Person.cpp  Person.hpp  README.md  Student.cpp  Student.hpp  Student2.cpp  Student2.hpp  UniversityDb.cpp  UniversityDb.hpp  a.out  main.cpp  myTests.cpp  myTests.hpp
